fix ui for overlap

--- a/src/app/components/schedule/schedule.component.css
+++ b/src/app/components/schedule/schedule.component.css
@@ -945,6 +945,8 @@ tbody th {
   box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.1), 0px 4px 15px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   position: absolute;
+  padding: 6px;
+  z-index: 99;
 }
 
 .single-row .monthly {
